--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: [Setup Architecture .NET Simple]
+description: [The idea is to promote some architecture for simples projects using solid concepts.]
