--- a/App/App.Web/bin/App.Web.dll.config
+++ b/App/App.Web/bin/App.Web.dll.config
@@ -17,6 +17,9 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
   </system.web>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\git\setup\setup-architecture\App\data\AppExample.mdf;Integrated Security=True;Connect Timeout=30" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
