--- a/App/App.Domain/App.Business.csproj
+++ b/App/App.Domain/App.Business.csproj
@@ -43,14 +43,16 @@
   <ItemGroup>
     <Compile Include="Interfaces\Repositories\IExampleRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
+    <Compile Include="Interfaces\Services\IExampleService.cs" />
+    <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Model\Example.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ExampleService.cs" />
+    <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="ViewModel\ExampleViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AutoMapper\" />
-    <Folder Include="Interfaces\Services\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
