Presentation Layer Implementation

--- a/App/App.Domain/App.Business.csproj
+++ b/App/App.Domain/App.Business.csproj
@@ -49,6 +49,7 @@
     <Compile Include="AutoMapper\ViewModelToDomainMappingProfile.cs" />
     <Compile Include="Interfaces\Repositories\IExampleRepository.cs" />
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
+    <Compile Include="Interfaces\Repositories\IUnitOfWork.cs" />
     <Compile Include="Interfaces\Services\IExampleService.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Model\Example.cs" />
