--- a/App/App.Web/Web.config
+++ b/App/App.Web/Web.config
@@ -22,7 +22,7 @@
     </httpModules>
   </system.web>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\data\AppExample.mdf;Integrated Security=True;Connect Timeout=30" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\data\AppExample.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
     <add name="AppWebContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=AppWebContext-20170526102829; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|AppWebContext-20170526102829.mdf"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
