--- a/App/App.Data/App.Data.csproj
+++ b/App/App.Data/App.Data.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Configurations\ExampleConfig.cs" />
     <Compile Include="Context\MainContext.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ExampleRepository.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
