--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-hacker
+title: Setup Architecture .NET Simple
+description: The idea is to promote some architecture for simples projects using solid concepts.
+show_downloads: true
