--- a/App/App.Web/Web.config
+++ b/App/App.Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -23,8 +23,7 @@
   </system.web>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\data\AppExample.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
-    <add name="AppWebContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=AppWebContext-20170526102829; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|AppWebContext-20170526102829.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="AppWebContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=AppWebContext-20170526102829; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|AppWebContext-20170526102829.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
