--- a/App/App.Domain/App.Business.csproj
+++ b/App/App.Domain/App.Business.csproj
@@ -33,6 +33,9 @@
     <Reference Include="AutoMapper, Version=4.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.4.2.1\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -51,10 +54,12 @@
     <Compile Include="Interfaces\Repositories\IRepositoryBase.cs" />
     <Compile Include="Interfaces\Repositories\IUnitOfWork.cs" />
     <Compile Include="Interfaces\Services\IExampleService.cs" />
+    <Compile Include="Interfaces\Services\IManagerLog.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Model\Example.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ExampleService.cs" />
+    <Compile Include="Services\ManagerLog.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="ViewModel\ExampleViewModel.cs" />
   </ItemGroup>
