--- a/App/App.Web/Web.config
+++ b/App/App.Web/Web.config
@@ -7,7 +7,26 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
+  <log4net>
+    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="C:\Log\log.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="500KB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %appdomain [%thread] %-5level %logger  - %message%newline" />
+      </layout>
+    </appender>
+    <logger name="ExampleLog">
+      <!--ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF-->
+      <level value="ALL" />
+      <appender-ref ref="RollingFileAppender" />
+    </logger>
+  </log4net>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
